--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+Welcome! This is a repository where I host all my personal data science projects.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+<h1> Contents </h1>
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-You can edit the `index.html` file to change this content.
-
-# Posts
+<ul>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/dating/notebook.ipynb> The Rise of Online Dating </a></li>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/immigration/notebook.ipynb> Undocumented Immigrant Tax Contributions </a></li>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/income-wealth/notebook.ipynb> The Relationship between Income and Wealth </a></li>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/living-wage/notebook.ipynb> Surviving on Minimum Wage in the United States </a></li>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/movies/notebook.ipynb> Do IMDB Ratings Suffer From Recency Bias? </a></li>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/temperature/notebook.ipynb> Global Warming since 1850, Month by Month </a></li>
+    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/world-happiness/notebook.ipynb> World Happiness Report </a></li>
+</ul>
