deploy: 3ff140b457ea5166e064d61ba994603bc2089232

--- a/index.html
+++ b/index.html
@@ -67,15 +67,19 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Welcome! This is a repository where I host all my personal data science projects.</p>
 
-<p><img src="/fastpages-test/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<h1> Contents </h1>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
-
-<h1 id="posts">Posts</h1>
+<ul>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/dating/notebook.ipynb&gt; The Rise of Online Dating &lt;/a&gt;</li>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/immigration/notebook.ipynb&gt; Undocumented Immigrant Tax Contributions &lt;/a&gt;</li>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/income-wealth/notebook.ipynb&gt; The Relationship between Income and Wealth &lt;/a&gt;</li>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/living-wage/notebook.ipynb&gt; Surviving on Minimum Wage in the United States &lt;/a&gt;</li>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/movies/notebook.ipynb&gt; Do IMDB Ratings Suffer From Recency Bias? &lt;/a&gt;</li>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/temperature/notebook.ipynb&gt; Global Warming since 1850, Month by Month &lt;/a&gt;</li>
+    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/world-happiness/notebook.ipynb&gt; World Happiness Report &lt;/a&gt;</li>
+</ul>
 
 
 
