deploy: 2b11ad14962750f645457688ad51c62993289fc4

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ window.onload = wrap_img;
     <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/world-happiness/notebook.ipynb&gt; World Happiness Report &lt;/a&gt;</li>
 </ul>
 
+<h1 id="posts">Posts</h1>
+
 
 
   
