--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Welcome! This is a repository where I host all my personal data science projects
 <h1> Contents </h1>
 
 <ul>
-    <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/dating/notebook.ipynb> The Rise of Online Dating </a></li>
+    <li> [https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/dating/notebook.ipynb](The Rise of Online Dating) </li>
     <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/immigration/notebook.ipynb> Undocumented Immigrant Tax Contributions </a></li>
     <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/income-wealth/notebook.ipynb> The Relationship between Income and Wealth </a></li>
     <li><a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/living-wage/notebook.ipynb> Surviving on Minimum Wage in the United States </a></li>
