--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ window.onload = wrap_img;
 <h1> Contents </h1>
 
 <ul>
-    <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/dating/notebook.ipynb&gt; The Rise of Online Dating &lt;/a&gt;</li>
+    <li> [https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/dating/notebook.ipynb](The Rise of Online Dating) </li>
     <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/immigration/notebook.ipynb&gt; Undocumented Immigrant Tax Contributions &lt;/a&gt;</li>
     <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/income-wealth/notebook.ipynb&gt; The Relationship between Income and Wealth &lt;/a&gt;</li>
     <li>&lt;a href=https://nbviewer.jupyter.org/github/KyleOS/Data-Analysis/blob/master/living-wage/notebook.ipynb&gt; Surviving on Minimum Wage in the United States &lt;/a&gt;</li>
